# sequences

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  pytest.xml
.github/: dependabot.yml
.github/workflows/: pytest.yml
src/sequences/preparations/: __init__.py  t1prep.py  t2prep.py
src/sequences/scripts/: t1_inv_rec_gre_single_line.py
src/sequences/utils/: __init__.py  system_defaults.py
tests/: conftest.py  ruff.toml
tests/preparations/: test_add_t2prep.py  test_t1prep.py
